app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-blaster-app
  namespace: ticket-blaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-blaster
  template:
    metadata:
      labels:
        app: ticket-blaster
    spec:
      containers:
        - name: ticket-blaster-app
          image: uffehandrup/ticket-blaster-image:v1
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: ticket-blaster-service
  namespace: ticket-blaster
spec:
  selector:
    app: ticket-blaster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ticket-blaster-http-route
  namespace: ticket-blaster
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "swwao-courses.orbit.au.dk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grp-24/
      backendRefs:
        - name: ticket-blaster-service
          port: 80
